--- a/js/index.html
+++ b/js/index.html
@@ -5,8 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ToDo Avançado</title>
+    
+    <link rel="stylesheet" href="/css/styles.css">
+    <!--referenciando css-->
+    <script src="/js/script.js" defer></script>
+    <!--referenciando js-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!--Referenciando biblioteca de fontes (font awesome)-->
+
+
 </head>
 <body>
+    <h1>ToDo Avançado</h1>
     
 </body>
 </html>
