--- a/js/index.html
+++ b/js/index.html
@@ -16,7 +16,76 @@
 
 </head>
 <body>
-    <h1>ToDo Avançado</h1>
-    
+    <div class="todo-container"></div>
+    <header>
+        <h1>To Do - Avançado</h1>
+
+    </header>
+    <form id="todo-form">
+        <p>Adicione sua tarefa:</p>
+        <div class="form-control"></div>
+        <input type="text" id="todo-input" placeholder="O que você vai fazer?">
+        <button type="submit">
+            <i class="fa-thin fa-plus"></i>
+        </button>
+    </form>
+
+    <form id="edit-form">
+        <p>Edite sua tarefa:</p>
+        <div class="form-control">
+            <input type="text" id="edit-input">
+            <button type="submit">
+                <i class="fa-solid fa-check-double"></i>
+            </button>
+        </div>
+        <button id="cancel-edit-btn">Cancelar</button>
+    </form>
+
+    <div id="toolbar">
+        <div id="search"></div>
+        <h4>Pesquisar:</h4>
+        <form>
+            <input type="text" id="search-input" placeholder="Buscar">
+            <button id="erase-button">
+                <i class="fa-solid fa-delete-left"></i>
+            </button>
+        </form>
+    </div>
+
+    <div id="filter">
+        <h4>Filtrar:</h4>
+        <select id="Filter-select">
+            <option value="all">Todos</option>
+            <option value="done">Feitos</option>
+            <option value="todo">A fazer</option>
+        </select>
+    </div>
+</div>
+<div class="todo">
+    <h3>Terminar a A3</h3>
+    <button class="finish-todo">
+        <i class="fa-solid fa-check"></i>
+    </button>
+    <button class="edit-todo">
+        <i class="fa-solid fa-pen"></i>
+    </button>
+    <button class="remove-todo">
+        <i class="fa-solid fa-xmark"></i>
+    </button>
+</div>
+
+<div class="todo">
+    <h3>Estudar  JS</h3>
+    <button class="finish-todo">
+        <i class="fa-solid fa-check"></i>
+    </button>
+    <button class="edit-todo">
+        <i class="fa-solid fa-pen"></i>
+    </button>
+    <button class="remove-todo">
+        <i class="fa-solid fa-xmark"></i>
+    </button>
+</div>
+
 </body>
 </html>
