consertando elementos html e estilizando form

--- a/js/index.html
+++ b/js/index.html
@@ -16,21 +16,22 @@
 
 </head>
 <body>
-    <div class="todo-container"></div>
+    <div class="todo-container">
     <header>
         <h1>To Do - Avançado</h1>
 
     </header>
     <form id="todo-form">
         <p>Adicione sua tarefa:</p>
-        <div class="form-control"></div>
+        <div class="form-control">
         <input type="text" id="todo-input" placeholder="O que você vai fazer?">
         <button type="submit">
             <i class="fa-thin fa-plus"></i>
         </button>
+    </div>
     </form>
 
-    <form id="edit-form">
+    <form id="edit-form" class="">
         <p>Edite sua tarefa:</p>
         <div class="form-control">
             <input type="text" id="edit-input">
@@ -59,7 +60,6 @@
             <option value="done">Feitos</option>
             <option value="todo">A fazer</option>
         </select>
-    </div>
 </div>
 <div class="todo">
     <h3>Terminar a A3</h3>
@@ -74,6 +74,7 @@
     </button>
 </div>
 
+
 <div class="todo">
     <h3>Estudar  JS</h3>
     <button class="finish-todo">
@@ -85,6 +86,7 @@
     <button class="remove-todo">
         <i class="fa-solid fa-xmark"></i>
     </button>
+</div>
 </div>
 
 </body>
