--- a/js/index.html
+++ b/js/index.html
@@ -31,7 +31,7 @@
     </div>
     </form>
 
-    <form id="edit-form" class="">
+    <form id="edit-form" class="hide">
         <p>Edite sua tarefa:</p>
         <div class="form-control">
             <input type="text" id="edit-input">
@@ -43,15 +43,15 @@
     </form>
 
     <div id="toolbar">
-        <div id="search"></div>
+        <div id="search">
         <h4>Pesquisar:</h4>
         <form>
-            <input type="text" id="search-input" placeholder="Buscar">
+            <input type="text" id="search-input" placeholder="Buscar"/>
             <button id="erase-button">
                 <i class="fa-solid fa-delete-left"></i>
             </button>
         </form>
-    </div>
+        </div>
 
     <div id="filter">
         <h4>Filtrar:</h4>
@@ -60,8 +60,11 @@
             <option value="done">Feitos</option>
             <option value="todo">A fazer</option>
         </select>
+    </div>
 </div>
-<div class="todo">
+
+<div id="todo-list">
+    <div class="todo">
     <h3>Terminar a A3</h3>
     <button class="finish-todo">
         <i class="fa-solid fa-check"></i>
@@ -73,10 +76,11 @@
         <i class="fa-solid fa-xmark"></i>
     </button>
 </div>
+</div>
 
-
-<div class="todo">
-    <h3>Estudar  JS</h3>
+<div id="todo-list">
+    <div class="todo done">
+    <h3>Estudar JS</h3>
     <button class="finish-todo">
         <i class="fa-solid fa-check"></i>
     </button>
@@ -87,6 +91,8 @@
         <i class="fa-solid fa-xmark"></i>
     </button>
 </div>
+</div>
+
 </div>
 
 </body>
