encerrando funcoes JS

--- a/js/index.html
+++ b/js/index.html
@@ -24,7 +24,7 @@
     <form id="todo-form">
         <p>Adicione sua tarefa:</p>
         <div class="form-control">
-        <input type="text" id="todo-input" placeholder="O que você vai fazer?">
+        <input type="text" id="todo-input" placeholder="O que você vai fazer?"/>
         <button type="submit">
             <i class="fa-thin fa-plus"></i>
         </button>
@@ -34,7 +34,7 @@
     <form id="edit-form" class="hide">
         <p>Edite sua tarefa:</p>
         <div class="form-control">
-            <input type="text" id="edit-input">
+            <input type="text" id="edit-input"/>
             <button type="submit">
                 <i class="fa-solid fa-check-double"></i>
             </button>
