--- a/js/index.html
+++ b/js/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ToDo Avançado</title>
+    <title>To Do Supremo</title>
     
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <!--referenciando css-->
-    <script src="/js/script.js" defer></script>
+    <script src="script.js" defer></script>
     <!--referenciando js-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!--Referenciando biblioteca de fontes (font awesome)-->
@@ -18,7 +18,7 @@
 <body>
     <div class="todo-container">
     <header>
-        <h1>To Do - Avançado</h1>
+        <h1>10 Coisas Para Fazer Antes de Morrer</h1>
 
     </header>
     <form id="todo-form">
@@ -56,22 +56,7 @@
 
 <div id="todo-list">
     <div class="todo">
-    <h3>Terminar a A3</h3>
-    <button class="finish-todo">
-        <i class="fa-solid fa-check"></i>
-    </button>
-    <button class="edit-todo">
-        <i class="fa-solid fa-pen"></i>
-    </button>
-    <button class="remove-todo">
-        <i class="fa-solid fa-xmark"></i>
-    </button>
-</div>
-</div>
-
-<div id="todo-list">
-    <div class="todo done">
-    <h3>Estudar JS</h3>
+    <h3>Terminar a faculdade</h3>
     <button class="finish-todo">
         <i class="fa-solid fa-check"></i>
     </button>
