--- a/js/index.html
+++ b/js/index.html
@@ -18,7 +18,7 @@
 <body>
     <div class="todo-container">
     <header>
-        <h1>Coisas Para Fazer Antes de Morrer</h1>
+        <h1>Fast Notes</h1>
 
     </header>
     <form id="todo-form">
